# exc

./: Cargo.toml
examples/: Cargo.toml
examples/examples/: gateio_fetch_tickers.rs
exc/: Cargo.toml
exc-gateio/: Cargo.toml  README.md
exc-gateio/src/: key.rs  lib.rs
exc-gateio/src/http/: layer.rs  mod.rs  response.rs
exc-gateio/src/http/request/: mod.rs
exc-gateio/src/service/: mod.rs
exc/src/: lib.rs
